<resources>
    <string name="app_name">WepApp</string>
    <string name="return_botton">Return</string>
    <string name="set_url">SET URL</string>
    <string name="refresh_1">refresh</string>
    <string name="save">save</string>
    <string name="humidity">Humidity</string>
    <string name="light">Light</string>
    <string name="pressure">Pressure</string>
    <string name="clear">CLEAR</string>
    <string name="clear2">ClEAR</string>
    <string name="return2">return</string>
    <string name="check_data">Check Data</string>
    <string name="polaczenie">Connection</string>
    <string name="o_programie">Version</string>
    <string name="connect">connect</string>
    <string name="memory">Memory</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="delate_data_ask">Would you like to delete all data?</string>
    <string name="no_data">NO DATA</string>
    <string name="temperature">Temperature</string>
    <string name="error_message">ERROR MESSAGE</string>
    <string name="timer">TIMER</string>
    <string name="minus">-</string>
    <string name="dodaj">+</string>
    <string name="save_data_to">SAVE DATA TO</string>
    <string name="save_period">SAVE PERIOD</string>
    <string name="save_data">SAVE DATA</string>
    <string name="periodic_recording_enable">Periodic recording ON</string>
    <string name="navigation">Navigation</string>
    <string name="no_connection">NO CONNECTION</string>

</resources>
