<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wheatfieldgolden"
    android:orientation="vertical"
    >


    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_weight="0"
        android:textColor="@color/colorPrimaryDark"

        android:visibility="invisible"

         />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/textWiewTemperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="9dp"
            android:layout_weight="1"
            android:background="@drawable/edit_text"
            android:gravity="center"
            android:hint="Temperature"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <TextView
            android:id="@+id/textWiewPressure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="9dp"
            android:layout_weight="1"
            android:background="@drawable/edit_text"
            android:gravity="center"
            android:hint="@string/pressure"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >


        <ImageView
            android:background="@drawable/ic_whatshot_white_48dp"
            android:id="@+id/imageView1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="42dp"
            android:layout_marginStart="42dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginRight="42dp"
            android:layout_marginEnd="42dp"
            android:background="@drawable/ic_file_download_white_48dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:orientation="horizontal"

            >
        <TextView
            android:id="@+id/textWiewLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="9dp"
            android:layout_weight="1"
            android:background="@drawable/edit_text"
            android:gravity="center"
            android:hint="@string/light"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <TextView

            android:id="@+id/textWiewHumidity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="9dp"
            android:layout_weight="1"
            android:background="@drawable/edit_text"
            android:gravity="center"
            android:hint="@string/humidity"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="42dp"
            android:layout_marginStart="42dp"
            android:background="@drawable/ic_flash_on_white_48dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginRight="42dp"
            android:layout_marginEnd="42dp"
            android:background="@drawable/ic_pool_white_48dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="45dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/refreshButton"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"

            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/buttonshape"

            android:onClick="saveButton"
            android:text="@string/save"
            />
        <Button
            android:id="@+id/CheckData"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/buttonshape"
            android:onClick="onCheckDataCLICK"
            android:text="@string/check_data"
            />
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        >


        <Button
            android:id="@+id/clearButton2"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/buttonshape"

            android:onClick="onClearDataClick1"
            android:text="@string/clear"
            />
        <Button
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"

            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/buttonshape"

            android:onClick="returnButton"
            android:text="@string/return_botton"
            />

    </LinearLayout>



</LinearLayout>